--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Welcome | MediCare Clinic</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <img src="images/logo.png" alt="Clinic Logo" class="logo">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
+  <section class="hero">
+    <h1>Welcome to MediCare Clinic</h1>
+    <p>Your health is our priority</p>
+    <a href="contact.html" class="btn">Book an Appointment</a>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 MediCare Clinic | All rights reserved.</p>
+  </footer>
+</body>
+</html>
