--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Clinic Logo" class="logo">
+    <img src="logo.PNG" alt="Clinic Logo" class="logo">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
