--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png.PNG" alt="Clinic Logo" class="logo">
+    <img src="logo.PNG" alt="Clinic Logo" class="logo">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
