--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>About Us | MediCare Clinic</title>
+  <title>About Us | P-Oasis Nursing and Maternity Home</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -17,12 +17,12 @@
   </header>
 
   <main>
-    <h2>About Our Clinic</h2>
-    <p>MediCare Clinic has been providing quality healthcare for over 15 years. Our team of experienced doctors, nurses, and staff are dedicated to your wellbeing.</p>
+    <h2>About P-Oasis Nursing and Maternity Home</h2>
+    <p>P-Oasis Nursing and Maternity Home has been providing quality healthcare for over 15 years. Our team of experienced doctors, nurses, and staff are dedicated to your wellbeing.</p>
   </main>
 
   <footer>
-    <p>&copy; 2025 MediCare Clinic</p>
+    <p>&copy; 2025 P-Oasis Nursing and Maternity Home</p>
   </footer>
 </body>
 </html>
