--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact Us | MediCare Clinic</title>
+  <title>Contact Us | P-Oasis Nursing and Maternity Home </title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -33,7 +33,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 MediCare Clinic</p>
+    <p>&copy; 2025 P-Oasis Nursing and Maternity Home</p>
   </footer>
 </body>
 </html>
