--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Welcome | MediCare Clinic</title>
+  <title>Welcome | P-Oasis Nursing and Maternity Home</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -18,13 +18,13 @@
   </header>
 
   <section class="hero">
-    <h1>Welcome to MediCare Clinic</h1>
+    <h1>Welcome to P-Oasis Nursing and Maternity Home</h1>
     <p>Your health is our priority</p>
     <a href="contact.html" class="btn">Book an Appointment</a>
   </section>
 
   <footer>
-    <p>&copy; 2025 MediCare Clinic | All rights reserved.</p>
+    <p>&copy; 2025 P-Oasis Nursing and Maternity Home | All rights reserved.</p>
   </footer>
 </body>
 </html>
