--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Our Services | MediCare Clinic</title>
+  <title>Our Services | P-Oasis Nursing and Maternity Home</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -28,7 +28,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 MediCare Clinic</p>
+    <p>&copy; 2025 P-Oasis Nursing and Maternity Home</p>
   </footer>
 </body>
   
